--- a/detail.html
+++ b/detail.html
@@ -2,209 +2,329 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>INT's</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>INT's</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
-        integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous">
-            const myCarouselElement = document.querySelector('#myCarousel')
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+          integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous">
+    const myCarouselElement = document.querySelector('#myCarousel')
 
-            const carousel = new bootstrap.Carousel(myCarouselElement, {
-                interval: 2000,
-                touch: false
-            })
-        </script>
-    <style>
-        @import url("https://fonts.googleapis.com/css2?family=Newsreader:ital,opsz,wght@0,6..72,200..800;1,6..72,200..800&display=swap");
+    const carousel = new bootstrap.Carousel(myCarouselElement, {
+      interval: 2000,
+      touch: false
+    })
+  </script>
+  <style>
+    @import url("https://fonts.googleapis.com/css2?family=Newsreader:ital,opsz,wght@0,6..72,200..800;1,6..72,200..800&display=swap");
 
-        body {
-            margin: 0;
-        }
+    body {
+      margin: 0;
+    }
 
-        .header {
-            padding-top: 40px;
-            padding-left: 3px;
-            background-color: #ffffff;
-            height: 90px;
-            align-items: center;
-            justify-content: center;
-            display: flex;
-        }
+    .header {
+      padding-top: 40px;
+      padding-left: 3px;
+      background-color: #ffffff;
+      height: 90px;
+      align-items: center;
+      justify-content: center;
+      display: flex;
+    }
 
-        .header>div {
-            color: #000000;
-            font-family: "Newsreader", serif;
-            font-size: 3rem;
-        }
+    .header>div {
+      color: #000000;
+      font-family: "Newsreader", serif;
+      font-size: 3rem;
+    }
 
-        .main {
-            display: flex;
-            flex-direction: column;
-        }
+    .main {
+      display: flex;
+      flex-direction: column;
+      position: relative;
+    }
 
-        #myCarousel {
-            width: 100%;
-            height: 512px;
-        }
+    #myCarousel {
+      width: 100%;
+      height: 512px;
+    }
 
-        .carousel-caption {
-            top: 1.5rem;
-        }
+    .carousel-caption {
+      top: 1.5rem;
+    }
 
-        .carousel-caption>h1 {
-            margin-bottom: 3rem;
-        }
+    .carousel-caption>h1 {
+      margin-bottom: 3rem;
+    }
 
-        #rows-container {
-            display: flex;
-            align-items: flex-start;
-            padding-top: 50px;
-            height: 600px;
-        }
+    #rows-container {
+      display: flex;
+      align-items: flex-start;
+      padding-top: 50px;
+      height: 600px;
+    }
 
-        .row {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-        }
+    .row {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
 
-        .col-lg-3 {
-            text-align: center;
-            border-style: solid;
-            border-width: 1.5px;
-            border-radius: 5px;
-            padding: 2rem 0.5rem;
-            width: 24%;
-        }
+    .col-lg-3 {
+      text-align: center;
+      border-style: solid;
+      border-width: 1.5px;
+      border-radius: 5px;
+      padding: 2rem 0.5rem;
+      width: 24%;
+    }
 
-        .fw-normal {
-            margin-top: 2rem;
-        }
+    .fw-normal {
+      margin-top: 2rem;
+    }
 
-        .detail {
-            margin: 25px auto 0 auto;
-            width: 1330px;
-            height: 500px;
-            padding: 80px;
-            background-color: rgb(255, 253, 231);
-            border-style: solid;
-            border-width: 1.5px;
-        }
+    .detail {
+      margin: 25px auto 0 auto;
+      width: 1330px;
+      height: 500px;
+      padding: 80px;
+      background-color: rgb(255, 253, 231);
+      border-style: solid;
+      border-width: 1.5px;
+    }
 
-        .update {
-            width: 1330px;
-            margin: 0 auto;
-            display: flex;
-            align-items: end;
+    .update {
+      width: 1330px;
+      margin: 0 auto;
+      display: flex;
+      align-items: end;
 
-            justify-content: end;
-        }
+      justify-content: end;
+    }
 
-        .card {
-            justify-content: center;
-        }
+    .card {
+      justify-content: center;
+    }
 
-        #a {
-            color: #000;
-            text-decoration: none;
-        }
+    #a {
+      color: #000;
+      text-decoration: none;
+    }
 
-        .bar {
-            width: 210px;
-            height: 5px;
-            margin-left: auto;
-            margin-right: auto;
-            margin-bottom: 20px;
-            background-color: black;
-        }
-    </style>
+    .bar {
+      width: 210px;
+      height: 5px;
+      margin-left: auto;
+      margin-right: auto;
+      margin-bottom: 20px;
+      background-color: black;
+    }
+    .update-modal{
+      box-shadow: 0 0 10px 0 gray;
+      background-color: rgb(250, 247, 198);
+      transition: all 1s;
+      opacity: 0;
+      position: absolute;
+    }
+
+    .update-modal-content hr{
+      width: 1100px;
+    }
+
+    input, h5 input, p input{
+      border: none;
+      background-color: rgb(250, 247, 198);
+    }
+
+    .update-modal-content-button{
+      display: flex;
+      align-items: end;
+      justify-content: end;
+      width: 1115px;
+
+    }
+
+    .update-modal-content-button button{
+
+    }
+
+    .grid-container{
+      display: grid;
+      grid-template-columns: 1fr;
+      grid-template-rows: auto auto;
+    }
+
+
+    #update_modal {
+      grid-row: 1;
+    }
+  </style>
+  <script type="module">
+    // import { initializeApp } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-app.js";
+    // import { getFirestore, collection, addDoc, getDocs } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-firestore.js";
+
+    // const firebaseConfig = {
+    //   apiKey: "AIzaSyDGlZ9TyVxuuYWasHQDLbxdgsVu8OO1FQc",
+    //   authDomain: "int-s-72dee.firebaseapp.com",
+    //   projectId: "int-s-72dee",
+    //   storageBucket: "int-s-72dee.appspot.com",
+    //   messagingSenderId: "684881337775",
+    //   appId: "1:684881337775:web:3aff3805fe1a0f8a14e35a",
+    //   measurementId: "G-5ESFPJV4BJ"
+    // };
+
+    // const app = initializeApp(firebaseConfig);
+    // const db = getFirestore(app);
+
+    $("#save").click(async function () {
+      // let image = $('#image').val()
+      // let title = $('#title').val()
+      // let content = $('#content').val()
+      // let date = $('#date').val()
+      //
+      // let doc = {
+      //   image : image,
+      //   title : title,
+      //   content :content,
+      //   date :date
+      // }
+      let data = await getDocs(collection(db, "information"));
+      console.log(data)
+    })
+
+    let isModal = false
+
+    $("#update").click(async function (){
+      if(isModal === false){
+        isModal = true
+        $("#update_modal").css("opacity", 1)
+      }else{
+        isModal = false
+        $("#update_modal").css("opacity", 0)
+      }
+    })
+
+    $("#save").click(async function (){
+      if(isModal === false){
+        isModal = true
+        $("#update_modal").css("opacity", 1)
+      }else{
+        isModal = false
+        $("#update_modal").css("opacity", 0)
+      }
+    })
+  </script>
 </head>
 
 <body>
-    <div class="header">
-        <div>INT's</div>
+<div class="header">
+  <div>INT's</div>
+</div>
+<div class="bar"></div>
+<div class="main grid-container">
+  <div class="card mb-3 detail" >
+    <div class="row g-0">
+      <div class="col-md-4">
+        <img src="https://postfiles.pstatic.net/MjAyNDA0MTZfNzgg/MDAxNzEzMjU3MDA1Mjcw.RRJD3mrFPYCIPizm_hbXKBzeGJMBCKpin9MzDZWwmz8g.mG5Gt9mTMyIpRnrkhU7sltZ6sUT-ZzlYTPuZcULWN4Ug.JPEG/KakaoTalk_20240416_174058966dd.jpg?type=w966"
+             width="300" height="350" class="img-fluid rounded-start" alt="...">
+      </div>
+      <div class="col-md-8">
+        <div class="card-body">
+          <hr>
+          <h3 class="card-title">김태완</h3>
+          <hr>
+          <h5 class="card-text"> MBTI : INTJ</h5>
+          <hr>
+          <p class="card-text">나만의 장점 : 남의 말에 휘둘리지 않는 자존감</p>
+          <hr>
+          <p class="card-text">자신의 스타일 : 깔끔하고 심플한 것을 선호</p>
+          <hr>
+          <p class="card-text">블로그 : <a id="a" class="card-text"
+                                        href="https://blog.naver.com/kangbaekho10s"
+                                        target="_blank">https://blog.naver.com/kangbaekho10s</a></p>
+          <hr>
+        </div>
+      </div>
     </div>
-    <div class="bar"></div>
-    <div class="main">
-        <div class="card mb-3 detail">
-            <div class="row g-0">
-                <div class="col-md-4">
-                    <img src="https://postfiles.pstatic.net/MjAyNDA0MTZfNzgg/MDAxNzEzMjU3MDA1Mjcw.RRJD3mrFPYCIPizm_hbXKBzeGJMBCKpin9MzDZWwmz8g.mG5Gt9mTMyIpRnrkhU7sltZ6sUT-ZzlYTPuZcULWN4Ug.JPEG/KakaoTalk_20240416_174058966dd.jpg?type=w966"
-                        width="300" height="350" class="img-fluid rounded-start" alt="...">
-                </div>
-                <div class="col-md-8">
-                    <div class="card-body">
-                        <hr>
-                        <h3 class="card-title">김태완</h3>
-                        <hr>
-                        <h5 class="card-text"> MBTI : INTJ</h5>
-                        <hr>
-                        <p class="card-text">나만의 장점 : 남의 말에 휘둘리지 않는 자존감</p>
-                        <hr>
-                        <p class="card-text">자신의 스타일 : 깔끔하고 심플한 것을 선호</p>
-                        <hr>
-                        <p class="card-text">블로그 : <a id="a" class="card-text"
-                                href="https://blog.naver.com/kangbaekho10s"
-                                target="_blank">https://blog.naver.com/kangbaekho10s</a></p>
-                        <hr>
-                    </div>
-                </div>
-            </div>
+  </div>
+  <div class="card mb-3 detail update-modal" id="update_modal" style="margin-left: 525px">
+    <div class="row g-0">
+      <div class="col-md-8">
+        <div class="card-body update-modal-content">
+          <hr>
+            <h1 class="card-text">이름 : <input type="text" placeholder="변경 전 이름"/></h1>
+          <hr>
+          <h5 class="card-text"> MBTI : <input type="text" placeholder="변경 전 MBTI"></h5>
+          <hr>
+          <p class="card-text">나만의 장점 : <input type="text" placeholder="장점"></p>
+          <hr>
+          <p class="card-text">자신의 스타일 : <input type="text" placeholder="스타일"></p>
+          <hr>
+          <p class="card-text">블로그 : <input type="text" placeholder="스타일"></p>
+          <hr>
+          <p class="card-text">이미지 : <input type="text" placeholder="이미지 주소"></p>
+          <hr>
         </div>
-        <div class="update">
-            <button type="button" class="btn btn-danger">Update</button>
+        <div class="update-modal-content-button">
+          <button type="button" class="btn btn-danger" id="save">Save</button>
         </div>
-        <div class="container" id="rows-container">
-            <div class="row" style="width: 1500px">
-                <div class="col-lg-3">
-                    <svg class="bd-placeholder-img rounded-circle" width="140" height="140"
-                        xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder"
-                        preserveAspectRatio="xMidYMid slice" focusable="false">
-                        <title>Placeholder</title>
-                        <rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect>
-                    </svg>
-                    <h2 class="fw-normal">김태완</h2>
-                    <p><a class="btn btn-secondary" href="#">View details »</a></p>
-                </div>
-                <!-- /.col-lg-3 -->
-                <div class="col-lg-3">
-                    <svg class="bd-placeholder-img rounded-circle" width="140" height="140"
-                        xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder"
-                        preserveAspectRatio="xMidYMid slice" focusable="false">
-                        <title>Placeholder</title>
-                        <rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect>
-                    </svg>
-                    <h2 class="fw-normal">오지석</h2>
-                    <p><a class="btn btn-secondary" href="#">View details »</a></p>
-                </div>
-                <!-- /.col-lg-3 -->
-                <div class="col-lg-3">
-                    <svg class="bd-placeholder-img rounded-circle" width="140" height="140"
-                        xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder"
-                        preserveAspectRatio="xMidYMid slice" focusable="false">
-                        <title>Placeholder</title>
-                        <rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect>
-                    </svg>
-                    <h2 class="fw-normal">김도균</h2>
-                    <p><a class="btn btn-secondary" href="#">View details »</a></p>
-                </div>
-                <!-- /.col-lg-3 -->
-                <div class="col-lg-3">
-                    <svg class="bd-placeholder-img rounded-circle" width="140" height="140"
-                        xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder"
-                        preserveAspectRatio="xMidYMid slice" focusable="false">
-                        <title>Placeholder</title>
-                        <rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect>
-                    </svg>
-                    <h2 class="fw-normal">이수진</h2>
-                    <p><a class="btn btn-secondary" href="#">View details »</a></p>
-                </div>
-            </div>
-        </div>
+      </div>
     </div>
+  </div>
+  <div class="update">
+    <button type="button" class="btn btn-danger" id="update">Update</button>
+  </div>
+  <div class="container" id="rows-container">
+    <div class="row" style="width: 1500px">
+      <div class="col-lg-3">
+        <svg class="bd-placeholder-img rounded-circle" width="140" height="140"
+             xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder"
+             preserveAspectRatio="xMidYMid slice" focusable="false">
+          <title>Placeholder</title>
+          <rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect>
+        </svg>
+        <h2 class="fw-normal">김태완</h2>
+        <p><a class="btn btn-secondary" href="#">View details »</a></p>
+      </div>
+      <!-- /.col-lg-3 -->
+      <div class="col-lg-3">
+        <svg class="bd-placeholder-img rounded-circle" width="140" height="140"
+             xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder"
+             preserveAspectRatio="xMidYMid slice" focusable="false">
+          <title>Placeholder</title>
+          <rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect>
+        </svg>
+        <h2 class="fw-normal">오지석</h2>
+        <p><a class="btn btn-secondary" href="#">View details »</a></p>
+      </div>
+      <!-- /.col-lg-3 -->
+      <div class="col-lg-3">
+        <svg class="bd-placeholder-img rounded-circle" width="140" height="140"
+             xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder"
+             preserveAspectRatio="xMidYMid slice" focusable="false">
+          <title>Placeholder</title>
+          <rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect>
+        </svg>
+        <h2 class="fw-normal">김도균</h2>
+        <p><a class="btn btn-secondary" href="#">View details »</a></p>
+      </div>
+      <!-- /.col-lg-3 -->
+      <div class="col-lg-3">
+        <svg class="bd-placeholder-img rounded-circle" width="140" height="140"
+             xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder"
+             preserveAspectRatio="xMidYMid slice" focusable="false">
+          <title>Placeholder</title>
+          <rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect>
+        </svg>
+        <h2 class="fw-normal">이수진</h2>
+        <p><a class="btn btn-secondary" href="#">View details »</a></p>
+      </div>
+    </div>
+  </div>
+</div>
 </body>
 
 </html>
