--- a/detail.html
+++ b/detail.html
@@ -6,23 +6,26 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>INT's</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
-    integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous">
-      const myCarouselElement = document.querySelector('#myCarousel')
+          integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous">
+    const myCarouselElement = document.querySelector('#myCarousel')
 
-      const carousel = new bootstrap.Carousel(myCarouselElement, {
-        interval: 2000,
-        touch: false
-      })
-    </script>
+    const carousel = new bootstrap.Carousel(myCarouselElement, {
+      interval: 2000,
+      touch: false
+    })
+  </script>
   <style>
     @import url("https://fonts.googleapis.com/css2?family=Newsreader:ital,opsz,wght@0,6..72,200..800;1,6..72,200..800&display=swap");
 
     body {
       margin: 0;
+    }
+    .uid{
+      display: none;
     }
 
     .pass {
@@ -126,15 +129,9 @@
       margin-bottom: 20px;
       background-color: black;
     }
-
-    .weather {
-      width: 50px;
-      height: 50px;
-    }
-
-    .update-modal {
+    .update-modal{
       width: 1300px;
-      margin: 0 auto;
+      margin:0 auto;
       box-shadow: 0 0 10px 0 gray;
       background-color: rgb(250, 247, 198);
       transition: all 1s;
@@ -144,18 +141,16 @@
       z-index: 1;
     }
 
-    .update-modal-content hr {
+    .update-modal-content hr{
       width: 1100px;
     }
 
-    input,
-    h5 input,
-    p input {
+    input, h5 input, p input{
       border: none;
       background-color: rgb(250, 247, 198);
     }
 
-    .update-modal-content-button {
+    .update-modal-content-button{
       display: flex;
       align-items: end;
       justify-content: end;
@@ -163,9 +158,11 @@
 
     }
 
-    .update-modal-content-button button {}
+    .update-modal-content-button button{
 
-    .grid-container {
+    }
+
+    .grid-container{
       display: grid;
       grid-template-columns: 1fr;
       grid-template-rows: auto auto;
@@ -176,7 +173,7 @@
       grid-row: 1;
     }
 
-    .update input {
+    .update input{
       margin-right: 20px;
       height: 35px;
     }
@@ -190,6 +187,7 @@
       addDoc,
       query,
       where,
+      updateDoc,
       doc
     } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore.js";
     let current_href = window.location.href;
@@ -213,23 +211,14 @@
 
     //  홈페이지 접속 시 데이터 보이기
     const q = query(collection(db, "cards"), where("__name__", "==", `${params}`));
-    console.log(collection(db, "cards"))
-    // let image = $('#image').val()
-    // let title = $('#title').val()
-    // let content = $('#content').val()
-    // let date = $('#date').val()
-    //
-    // let doc = {
-    //   image : image,
-    //   title : title,
-    //   content :content,
-    //   date :date
-    // }
+    console.log(collection(db,"cards"))
+
+    let userDoc = doc(db,"cards",params )
 
     let data = await getDocs(q);
     data.forEach((doc) => {
       console.log(doc.data())
-      let data = doc.data()
+      let data =doc.data()
       let tempHtml = ` <div class="card mb-3 detail" >
                        <div class="row g-0">
                             <div class="col-md-4">
@@ -259,22 +248,22 @@
       </div>
     </div>
   </div>
-  <div class="card mb-3 detail update-modal" id="update_modal" style="margin-left: 540px">
+  <div class="card mb-3 detail update-modal" id="update_modal" style="margin-left: 100px">
     <div class="row g-0">
       <div class="col-md-8">
         <div class="card-body update-modal-content">
           <hr>
-          <h3 class="card-text">이름 : <input type="text" placeholder=${data.name}></h3>
+          <h3 class="card-text">이름 : <input type="text" placeholder=${data.name} id="update_name" value=${data.name}></h3>
           <hr>
-          <h5 class="card-text"> MBTI : <input type="text" placeholder=${data.mbti}></h5>
+          <h5 class="card-text"> MBTI : <input type="text" placeholder=${data.mbti} id="update_mbti" value=${data.mbti}></h5>
           <hr>
-          <p class="card-text">나만의 장점 : <input type="text" placeholder=${data.strength}></p>
+          <p class="card-text">나만의 장점 : <input type="text" placeholder=${data.strength} id="update_strength" value=${data.strength}></p>
           <hr>
-          <p class="card-text">자신의 스타일 : <input type="text" placeholder=${data.style}></p>
+          <p class="card-text">자신의 스타일 : <input type="text" placeholder=${data.style} id="update_style" value=${data.style}></p>
           <hr>
-          <p class="card-text">블로그 : <input type="text" placeholder=${data.blog}></p>
+          <p class="card-text">블로그 : <input type="text" placeholder=${data.blog} id="update_blog" value=${data.blog}></p>
           <hr>
-          <p class="card-text">이미지 : <input type="text" placeholder=${data.image}></p>
+          <p class="card-text">이미지 : <input type="text" placeholder=${data.image} id="update_image" value=${data.image}></p>
           <hr>
         </div>
         <div class="update-modal-content-button">
@@ -292,11 +281,11 @@
     let updateModal = $("#update_modal")
 
     //모달 띄우기 & 닫기
-    $("#update").click(async function () {
-      if (!$("#password").val()) {
+    $("#update").click(async function (){
+      if(!$("#password").val()) {
         alert("비밀번호를 입력해주세요")
-      } else {
-        try {
+      }else{
+        try{
           let data = await getDocs(q);
           let pw = ""
           data.forEach((doc) => {
@@ -319,7 +308,7 @@
             }
           }
 
-        } catch (error) {
+        }catch (error){
           console.error(error)
         }
       }
@@ -327,95 +316,103 @@
     })
 
     //저장 & 모달 닫기
-    $("#save").click(async function () {
-      if (isModal === false) {
+    $("#save").click(async function (){
+      let name = $("#update_name").val()
+      let mbti = $("#update_mbti").val()
+      let strength = $("#update_strength").val()
+      let style = $("#update_style").val()
+      let blog = $("#update_blog").val()
+      let image = $("#update_image").val()
+
+
+      console.log(`name : ${name} , mbti : ${mbti} , strength : ${strength} , style : ${style} , blog : ${blog} , image : ${image}`)
+      if(isModal === false){
         isModal = true
         $("#update_modal").css("opacity", 1)
-      } else {
-        isModal = false
-        $("#update_modal").css("opacity", 0)
-        updateModal.css("pointer-events", "none")
+      }else{
+
+        try {
+          if(!name || !mbti || !strength || !style || !blog || !image){
+            alert("빈 칸이 있습니다 빈칸을 채워주세요")
+          }else{
+            let res = await updateDoc(userDoc, {
+              name: name,
+              mbti: mbti,
+              strength : strength,
+              style : style,
+              blog : blog,
+              image : image
+            })
+            isModal = false
+            $("#update_modal").css("opacity", 0)
+            updateModal.css("pointer-events", "none")
+            alert("저장이 완료되었습니다")
+            window.location.reload()
+          }
+        }catch (e){
+          console.error(e)
+        }
       }
+
     })
 
-    document.querySelector(".header > div").onclick = () => {
-      if (window.location.pathname.split("/").slice(-1)[0].includes("html")) {
-        window.location.href =
-          window.location.origin +
-          window.location.pathname.split("/").slice(0, -1).join("/") +
-          "/";
+    function make_card(name, image, uid) {
+      return `<div class="col-lg-3">
+            <img height=140 width= 140 src="${image}" alt="...">
+            <h2 class="fw-normal">${name}</h2>
+            <p>
+              <a class="btn btn-secondary detail-btn">View details »</a>
+            </p>
+            <input class="uid" id="uid" value=${uid}>
+          </div>`;
+    }
+    //아래 카드 보여주기
+    const querySnapshot = await getDocs(
+      query(collection(db, "cards"))
+    );
+
+    let newUid = ""
+    const card_rows = $("#card-rows");
+    querySnapshot.forEach((doc) => {
+      const { name, image } = doc.data();
+      const temp_html = make_card(name, image, doc.id);
+      newUid = doc.id
+      card_rows.append(temp_html);
+    });
+
+    let detail_btn_click = (newUid) => () => {
+
+      let current_href = window.location.href;
+      if (current_href.split("/").slice(-1)[0].includes("html")) {
+        window.location =
+          current_href.split("/").slice(0, -1).join("/") +
+          "/detail.html?uid=" +
+          `${$('#uid').val()}`;
       } else {
-        window.location.href = window.location.origin;
+        window.location = current_href + "?uid=" + `${$('#uid').val()}`;
       }
     };
+    card_rows.children().click(detail_btn_click(newUid));
 
-    $(document).ready(function () {
-      let url = "http://spartacodingclub.shop/sparta_api/weather/seoul";
-      fetch(url).then(res => res.json()).then(data => {
-        let temp = data['icon'];
-        jQuery('#msg').attr("src", temp);
-      })
-    })
 
   </script>
 </head>
 
 <body>
-  <div class="header">
-    <div>INT's</div>
-    <div class="weather">
-      <img id="msg" src="">
-    </div>
+<div class="header">
+  <div>INT's</div>
+</div>
+<div class="bar"></div>
+<div class="main grid-container" >
+  <div class="main grid-container" id="detail_page">
+
   </div>
-  <div class="bar"></div>
-  <div class="main grid-container">
-    <div class="main grid-container" id="detail_page">
+  <div class="container" id="rows-container">
+    <div class="row" style="width: 1500px" id="card-rows">
 
     </div>
-    <div class="container" id="rows-container">
-      <div class="row" style="width: 1500px">
-        <div class="col-lg-3">
-          <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg"
-            role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false">
-            <title>Placeholder</title>
-            <rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect>
-          </svg>
-          <h2 class="fw-normal">김태완</h2>
-          <p><a class="btn btn-secondary" href="#">View details »</a></p>
-        </div>
-        <!-- /.col-lg-3 -->
-        <div class="col-lg-3">
-          <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg"
-            role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false">
-            <title>Placeholder</title>
-            <rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect>
-          </svg>
-          <h2 class="fw-normal">오지석</h2>
-          <p><a class="btn btn-secondary" href="#">View details »</a></p>
-        </div>
-        <!-- /.col-lg-3 -->
-        <div class="col-lg-3">
-          <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg"
-            role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false">
-            <title>Placeholder</title>
-            <rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect>
-          </svg>
-          <h2 class="fw-normal">김도균</h2>
-          <p><a class="btn btn-secondary" href="#">View details »</a></p>
-        </div>
-        <!-- /.col-lg-3 -->
-        <div class="col-lg-3">
-          <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg"
-            role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false">
-            <title>Placeholder</title>
-            <rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect>
-          </svg>
-          <h2 class="fw-normal">이수진</h2>
-          <p><a class="btn btn-secondary" href="#">View details »</a></p>
-        </div>
-      </div>
-    </div>
   </div>
+</div>
 </body>
 
 </html>
